<resources>
    <string name="app_name">EnglishCards</string>
    <string name="english_label">English:</string>
    <string name="japanese_label">Japanese:</string>
    <string name="memo_label">Memo:</string>
    <string name="save_button">Save</string>
    <string name="delete_button">Delete</string>
    <string name="cancel_button">Cancel</string>
    <string name="preference_menu">Preference</string>
    <string name="word_card_menu">Word Card</string>
    <string name="add_menu">Add</string>
    <string name="max_words_in_card">Max Words in English Card</string>
    <string name="random_words_in_card">Random Words in English Card</string>
    <string name="random_switch">Random?</string>
    <string name="back_button">Back</string>
    <string name="home_menu">Main</string>
    <string name="mother_language_label">Japanese:</string>
    <string name="word_exam_menu">Word Exam</string>
    <string name="exam_title_label">Exam (X/X)</string>
    <string name="word_exam_pref_tab">Word Exam</string>
    <string name="import_pref_tab">Import</string>
    <string name="number_question_label">Number Of Question :</string>
    <string name="en_ml_label"><![CDATA[English <-> Mother Language]]></string>
    <string name="ml_en_radio_button"><![CDATA[Mother Language => English]]></string>
    <string name="en_ml_radio_button"><![CDATA[English => Mother Language]]></string>
    <string name="check_required_label">Check Required :</string>
    <string name="change_check_required_label">Do you want to change the check required?</string>
    <string name="show_image_button">Image</string>
    <string name="import_english_word_label">Import English Word</string>
    <string name="clear_and_import_button">Clear And Import</string>
    <string name="import_grammar_exam_label">Import Grammar Exam</string>
    <string name="english_word_for_toeic_label">English words for TOEIC</string>
    <string name="grammar_exam_for_toeic_label">Grammar Exam For TOEIC</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="grammar_exam_menu">Grammar Exam</string>
    <string name="answer_button">Answer</string>
    <string name="select_a_button">A</string>
    <string name="select_b_button">B</string>
    <string name="select_c_button">C</string>
    <string name="select_d_button">D</string>
    <string name="next_question_button">Go to next question</string>
    <string name="url_label">URL :</string>
    <string name="detail_label">Detail</string>
    <string name="go_to_edit_button">To Edit Page</string>
</resources>