<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".exam.grammars.GrammarExamQuestionFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="20dp"
        android:paddingTop="20dp"
        android:padding="30dp">

        <TextView
            android:id="@+id/grammarQuestionTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:textSize="24sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="20dp">

        <TextView
            android:id="@+id/candidateTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom|center"
        android:orientation="horizontal"
        android:padding="5dp">

        <Button
            android:id="@+id/selectAButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_a_button"
            android:layout_margin="5dp"/>

        <Button
            android:id="@+id/selectBButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_b_button"
            android:layout_margin="5dp"/>

        <Button
            android:id="@+id/selectCButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_c_button"
            android:layout_margin="5dp"/>

        <Button
            android:id="@+id/selectDButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_d_button"
            android:layout_margin="5dp"/>
    </LinearLayout>
</LinearLayout>