<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/preferenceFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".pref.PrefExamFragment">

    <TextView
        android:id="@+id/numberQuestionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/number_question_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/numverQuestionEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="number"
        android:maxLength="5"
        android:numeric="integer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numberQuestionTextView" />

    <TextView
        android:id="@+id/englishMotherLanguageTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/en_ml_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numverQuestionEditText" />

    <RadioGroup
        android:id="@+id/englishMotherLanguageRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/englishMotherLanguageTextView">

        <RadioButton
            android:id="@+id/englishToMotherLanguageRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/en_ml_radio_button" />

        <RadioButton
            android:id="@+id/motherLanguageToEnglishRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ml_en_radio_button" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>